clearing captions to ensure there is no overlap

--- a/style.css
+++ b/style.css
@@ -1176,6 +1176,7 @@ ul.nav-menu li.current_page_item {
 
 .wp-caption {
   border: 1px solid #ccc;
+  clear: both;
   margin-bottom: 1.5em;
   max-width: 100%; }
 
